--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,29 @@
 language: ruby
 
 rvm:
-  - 2.3
-  - 2.4
-  - jruby-head
-
-gemfile:
-  - Gemfile
-
-notifications:
-  email: false
+  - 2.5
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get -y install nodejs git libsqlite3-dev libpq-dev libmysqlclient-dev zlib1g-dev libvirt-dev
+install:
+  - unset BUNDLE_GEMFILE
+  - cd ..
+  - git clone https://github.com/theforeman/foreman.git -b ${FOREMAN_CORE_BRANCH} --depth 1
+  - cd ${FOREMAN_PLUGIN_NAME}
+  - bundle install --jobs=3 --retry=3
+  - cd ../foreman
+  - echo "gemspec :path => '../${FOREMAN_PLUGIN_NAME}'" > bundler.d/${FOREMAN_PLUGIN_NAME}.local.rb
+  - ln -s settings.yaml.test config/settings.yaml
+  - ln -s database.yml.example config/database.yml
+  - bundle install --jobs=3 --retry=3 --without journald postgresql mysql2 console journald
+  - bundle exec rake db:migrate RAILS_ENV=test
+script:
+  - cd ../${FOREMAN_PLUGIN_NAME}
+  - cd ../foreman
+  - bundle exec rake test:${FOREMAN_PLUGIN_NAME}
+env:
+  global:
+    - TESTOPTS=-v
+    - FOREMAN_PLUGIN_NAME=foreman_kubevirt
+  matrix:
+    - FOREMAN_CORE_BRANCH=develop
