--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: ruby
-
+services:
+  - postgresql
 rvm:
   - 2.5
+cache:
+  - bundler
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get -y install nodejs git libsqlite3-dev libpq-dev libmysqlclient-dev zlib1g-dev libvirt-dev
+  - sudo apt-get -y install nodejs git libsqlite3-dev libpq-dev zlib1g-dev libvirt-dev
 install:
   - unset BUNDLE_GEMFILE
   - cd ..
@@ -14,12 +17,13 @@ install:
   - cd ../foreman
   - echo "gemspec :path => '../${FOREMAN_PLUGIN_NAME}'" > bundler.d/${FOREMAN_PLUGIN_NAME}.local.rb
   - ln -s settings.yaml.test config/settings.yaml
-  - ln -s database.yml.example config/database.yml
-  - bundle install --jobs=3 --retry=3 --without journald postgresql mysql2 console journald
-  - bundle exec rake db:migrate RAILS_ENV=test
+  - bundle install --jobs=3 --retry=3 --without journald mysql2 console journald
 script:
+  - export DATABASE_URL=postgresql://localhost/travis_ci_test
   - cd ../${FOREMAN_PLUGIN_NAME}
   - cd ../foreman
+  - bundle exec rake db:create RAILS_ENV=test
+  - bundle exec rake db:migrate RAILS_ENV=test
   - bundle exec rake test:${FOREMAN_PLUGIN_NAME}
 env:
   global:
