Use theforeman-rubocop gem
Choose to inherit just some cops, because i wanted to inherit rules from
style_lenient.yml as well, i followed this
https://github.com/theforeman/theforeman-rubocop?tab=readme-ov-file#choose-just-some-cops

Also drop some cops from the .rubocop.yml config, because that was present in inherit-gem.

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -11,7 +11,7 @@ jobs:
     name: Rubocop
     uses: theforeman/actions/.github/workflows/rubocop.yml@v0
     with:
-      command: bundle exec rubocop
+      command: bundle exec rubocop --parallel --format github
 
   test:
     name: Ruby
