Use strict from theforeman-rubocop and fix auto-correctable findings

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,75 +1,5 @@
-inherit_from:
-  - .rubocop_todo.yml
+inherit_from: .rubocop_todo.yml
 
 inherit_gem:
   theforeman-rubocop:
-    - lenient.yml
-
-# Don't enforce certain methods, e.g. detect over find
-Style/CollectionMethods:
-  Enabled: false
-
-# Don't enforce frozen string literals
-Style/FrozenStringLiteralComment:
-  Enabled: false
-
-Style/FormatStringToken:
-  Enabled: false
-
-Style/FormatString:
-  Enabled: false
-
-Style/RaiseArgs:
-  Enabled: false
-
-Naming/MethodParameterName:
-  Enabled: false
-
-Metrics:
-  Enabled: false
-
-Layout/LineLength:
-  Enabled: false
-
-Performance/Casecmp:
-  Enabled: false
-
-Style/InverseMethods:
-  Enabled: false
-
-Bundler/OrderedGems:
-  Enabled: false
-
-Layout/DotPosition:
-  Enabled: false
-
-Style/IfUnlessModifier:
-  Enabled: false
-
-Style/ConditionalAssignment:
-  Enabled: false
-
-Style/ParenthesesAroundCondition:
-  Enabled: false
-
-Layout/HashAlignment:
-  Enabled: false
-
-Layout/ParameterAlignment:
-  Enabled: false
-
-Style/ParallelAssignment:
-  Enabled: false
-
-Style/PreferredHashMethods:
-  Enabled: true
-
-# Won't work with sqlite
-Rails/BulkChangeTable:
-  Enabled: true
-
-Style/MultipleComparison:
-  Enabled: true
-
-Rails/RefuteMethods:
-  Enabled: true
+    - strict.yml
